# losha

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  Readme.md
apps/PLSH/: CMakeLists.txt  PLSHItem.hpp  PLSHQuery.hpp  plsh.cpp  plsh.hpp
apps/e2lsh/: README  README.md  Readme.md  e2lsh.cpp  e2lsh.hpp  sift10k.hpp  sift1b.hpp  sift1m.hpp  small.hpp  small_binary.hpp
apps/e2lsh/data/: .gitignore  README.md  item_ss.txt  query_ss.txt  wb_item.cpp
apps/e2lsh/e2lsh/: CMakeLists.txt  READ_old  e2lsh.hpp
apps/e2lsh_ir/: CMakeLists.txt  e2lsh_ir.cpp  e2lsh_ir.hpp  sift_ir.hpp
apps/e2lsh_ir/data/: wb_query.cpp
apps/gqr/: CMakeLists.txt  gqr.cpp  gqr.hpp
apps/hammingrank/: CMakeLists.txt  hammingrank.cpp  l2hfactory.hpp  l2hfunction.hpp
apps/linearscan/: CMakeLists.txt  linearscan.cpp  linearscan.h
apps/mpplsh/: CMakeLists.txt  mpplsh.cpp  mpplsh.hpp
apps/plsh/: CMakeLists.txt  plsh.cpp  plsh.hpp
apps/plsh/data/: .gitignore  diy_checker.cpp  diy_generator.cpp
apps/simhash/: CMakeLists.txt  Readme.md  basic.hpp  glove2m.hpp  simhash.cpp  simhash.hpp
apps/simhash/handle_glove2.2m/: .gitignore
apps/simhash/handle_glove2.2m/apps/: CMakeLists.txt  cal_error_ratio.cpp  cal_groundtruth.cpp  sample_queries.cpp
apps/simhash/handle_glove2.2m/script/: cal_error_ratio.sh  cal_groundtruth.sh  glove_to_fvecs.cpp  glove_to_fvecs.sh  sample_queries.sh
apps/simhash/small_dataset/: item_small.txt  query_small.txt
conf/: .gitignore  PLSH.conf  dish.conf  e2lsh-slaves.conf  e2lsh.conf  exec.sh  gqr.conf  hlsh.conf  knngraph_train-slaves.conf  knngraph_train.conf  linearscan-slaves.conf  linearscan.conf  mpplsh.conf  simhash.conf  slaves
conf/new_conf/: e2lsh.conf  lshH3.conf
data/: item_ss  query_ss  wb_item  wb_query
data/idlibsvm/tweet/: tweet_angular_groundtruth.lshbox  tweet_query.idlibsvm
demo/: .gitignore  Img2Sift.cpp  Readme.md  create_match.cpp
demo/data/inter/: all.txt  duck.fvecs
demo/results/: all.txt
include/losha/common/: aggre.hpp  algebra.hpp  distor.hpp  dotproduct.hpp  timer.hpp  writer.hpp
include/losha/query/: default.hpp
knngraph/: CMakeLists.txt  README.md
knngraph/apps/: CMakeLists.txt  adjobject.h  block.h  clustering.h  dataadjhandler.h  dataagg.h  dataobject.h  knnagg.h  knnconnected_components.cpp  knnconnected_components.h  knngraph_train.cpp  knngraph_train.h  knnloader.h  knnvertex.h  pqblock.h
knngraph/data/audio/: audio_sample.idfvecs  audio_sample_groundtruth.lshbox
knngraph/script/: cal_sample_groundtruth.sh  knngraph_train.sh  master.sh  run.sh  sample_base.sh
knngraph/tools/: CMakeLists.txt  sample_base.cpp
l2h/: CMakeLists.txt  dish.cpp
lshcore/: CMakeLists.txt  CosLSHFactory.hpp  LSHAlgebra.hpp  SimHashFactory.hpp  coslshfunction.hpp  densevector.hpp  e2lshfactory.hpp  e2lshfunction.hpp  lshbucket.hpp  lshengine.hpp  lshfactory.hpp  lshitem.hpp  lshquery.hpp  lshstat.hpp  lshutils.cpp  lshutils.hpp
lshcore/loader/: loader.h
lshcore/lshfactory/: apsimhashfactory.hpp  pcafactory.hpp  pcahasher.hpp  simhashfactory.hpp  simhashfunction.hpp
lshcore/sparse/: CMakeLists.txt  apsparsecoslshfactory.hpp  sparsecoslshfactory.hpp
lshcore/util/: topkpairs.hpp
script/: cal_groundtruth.sh  cal_groundtruth_idlibsvm.sh  evaluate.sh  exec.sh  idfvecs.py  master.sh  prun.sh  run.sh
script/src/: cal_groundtruth_idlibsvm.cpp  cal_groundtruth_idlibsvm.h  evaluate_triplets.cpp
test/: CMakeLists.txt  lshutils_test.cpp  sparsecoslshfactory_test.cpp  topkpairs_test.cpp
tools/: CMakeLists.txt  cal_groundtruth_idfvecs.cpp  cal_groundtruth_idfvecs.h  evaluate_triplets.cpp
util/: ANNtransform  ANNtransform.cpp  smallq2  test.txt  test2.txt
