add_subdirectory(plsh)
add_subdirectory(e2lsh)
add_subdirectory(hammingrank)
# add_subdirectory(srs)
# add_subdirectory(iterative-coslsh)
# add_subdirectory(nb-iterative-coslsh)
# add_subdirectory(multiprobe-lsh)
# add_subdirectory(mr-clustering)
# add_subdirectory(mr-ann)
# add_subdirectory(tl-mit-plsh)
